--- a/changelog
+++ b/changelog
@@ -75,6 +75,9 @@
 	26) PR #1347 for #1730. The Fortran backend now generates declarations with
 	dependencies in the appropriate order.
 
+	27) PR #1729. Minor fixes for MarkDown link checker and path to
+	test file.
+
 release 2.2.0 17th March 2022
 
 	1) PR #1439 for #1074. Adds a GOcean example for the use of the NaN-
