--- a/changelog
+++ b/changelog
@@ -81,6 +81,8 @@
 	28) PR #1733 for #1707. Update PSyclone master to the latest version of
 	fparser to enable running of PSyclone tests.
 
+	29) PR #1679. Add a limit parameter to the PSyIR node ancestor method.
+
 release 2.2.0 17th March 2022
 
 	1) PR #1439 for #1074. Adds a GOcean example for the use of the NaN-
