--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
+
 release 2.3.0 9th June 2022
 
 	1) PR #1672. Fixes BOZ literal standard incompatibility in the
