#1669 Updated UG and changelog.

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
+	2) PR #1669 for #450. Remove set_dirty/clean from ACC regions
 
 release 2.3.0 9th June 2022
 
