--- a/changelog
+++ b/changelog
@@ -4,6 +4,8 @@
 
 	3) PR #1745 towards #1731. Split PSyLoop class from Loop node.
 
+	4) PR #1761 for #1760. Create release 2.3.1
+
 release 2.3.0 9th June 2022
 
 	1) PR #1672. Fixes BOZ literal standard incompatibility in the
