--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
+	1) PR #1758 for #1741. Splits the PSyData read functionality into a
+	standalone module to remove dependence on infrastructure for
+	driver code.
+
+release 2.3.1 17th of June 2022	
+
+        1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
 
 	2) PR #1669 for #450. Remove set_dirty/clean from ACC regions
 
