#1766 update changelog and ug

--- a/changelog
+++ b/changelog
@@ -2,6 +2,9 @@
 	standalone module to remove dependence on infrastructure for
 	driver code.
 
+	2) PR #1766 FOR #1764. Fixes various syntax errors in some of the
+	Fortran test files.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
