--- a/changelog
+++ b/changelog
@@ -8,6 +8,9 @@
 	3) PR #1759 for #1752. Updates to GOcean examples so that F90FLAGS
 	is used consistently and is also used when linking.
 
+	4) PR #1700. Various improvements to the example NEMO processing
+	scripts.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
