--- a/changelog
+++ b/changelog
@@ -11,6 +11,9 @@
 	4) PR #1700. Various improvements to the example NEMO processing
 	scripts.
 
+	5) PR #1762 for #1743. Ensures declaration of precision variables
+	in PSyAD test harness.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
