--- a/changelog
+++ b/changelog
@@ -18,6 +18,9 @@
 
 	7) PR #1620 for #1555. Create Algorithm Layer for a Kernel.
 
+	8) PR #1767 for #1739. Fixes dep-analysis bug whereby CMA operator
+	arguments to LFRic kernels were not given correct access value.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
