--- a/changelog
+++ b/changelog
@@ -24,6 +24,9 @@
 	9) PR #1763 for #1717. Fixes invalid adjoint names for subroutine
 	and module.
 
+	10) PR #1776 for #1775. Fixes post_region_code_gen and improves
+	test fixtures.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
