--- a/changelog
+++ b/changelog
@@ -27,6 +27,9 @@
 	10) PR #1776 for #1775. Fixes post_region_code_gen and improves
 	test fixtures.
 
+	11) PR #1784 towards #1779. Removes the use of config-provided bounds
+	from the NemoRange2Loop Transformation.
+
 release 2.3.1 17th of June 2022	
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
