--- a/changelog
+++ b/changelog
@@ -33,6 +33,8 @@
 	12) PR #1765 for #1724. Remove kernel use statements from
 	processed algorithm layer code.
 
+	13) PR #1785 for #1771. Refactor algorithm-creation functionality.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
