--- a/changelog
+++ b/changelog
@@ -38,6 +38,8 @@
 	14) PR #1769 for #1721. Fixes bugs in use of sympy simplify() and
 	expand().
 
+	15) PR #1791 for #1780. Add setval_random built-in in LFRic API.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
