--- a/changelog
+++ b/changelog
@@ -42,6 +42,8 @@
 
 	16) PR #1778 for #1751. Add ReplaceInductionVariableTrans transformation.
 
+	17) PR #1652 for #1645. Symbols representing LFRic BuiltIn Functors
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
