--- a/changelog
+++ b/changelog
@@ -44,6 +44,9 @@
 
 	17) PR #1652 for #1645. Symbols representing LFRic BuiltIn Functors
 
+	18) PR #1795 for #1583. Bug fix for PSyAD for expressions involving
+	a unary minus.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
