#1795 update location of NEMO coding conventions

--- a/doc/bibliography/references.bib
+++ b/doc/bibliography/references.bib
@@ -11,7 +11,7 @@
 @manual{nemo_code_conv,
    title = "NEMO Coding Conventions",
    version = "3",
-   url = "https://forge.ipsl.jussieu.fr/nemo/attachment/wiki/Documentation/NEMO_coding.conv_v3.pdf",
+   url = "https://forge.nemo-ocean.eu/nemo/attachment/wiki/Documentation/NEMO_coding.conv_v3.pdf2",
    year = "2013"
 }
 
