--- a/changelog
+++ b/changelog
@@ -47,6 +47,8 @@
 	18) PR #1795 for #1583. Bug fix for PSyAD for expressions involving
 	a unary minus.
 
+	19) PR #1809. A few fixes for code style issues.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
