--- a/changelog
+++ b/changelog
@@ -49,6 +49,9 @@
 
 	19) PR #1809. A few fixes for code style issues.
 
+	20) PR #1803 for #1797. Adds support for logical variables to the
+ 	PSyData	API.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
