--- a/changelog
+++ b/changelog
@@ -52,6 +52,9 @@
 	20) PR #1803 for #1797. Adds support for logical variables to the
  	PSyData	API.
 
+	21) PR #1804 for #637. Extends the dependence analysis to support
+	LFRic built-in kernels.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
