--- a/changelog
+++ b/changelog
@@ -55,6 +55,9 @@
 	21) PR #1804 for #637. Extends the dependence analysis to support
 	LFRic built-in kernels.
 
+	22) PR #1790 for #1787. Adds HoistLoopBoundsExprTrans transformation
+	which hoists complex loop-bound expressions out of loops.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
