--- a/changelog
+++ b/changelog
@@ -61,6 +61,8 @@
 	23) PR #1811 for #1810. Separate LFRic LMA Operator infrastructure
 	into its own file.
 
+	24) PR #1808 for #1681. Extends PSyAD to reject functions.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
