--- a/changelog
+++ b/changelog
@@ -63,6 +63,9 @@
 
 	24) PR #1808 for #1681. Extends PSyAD to reject functions.
 
+	25) PR #1633 towards #1631. New implementation of kernel meta-data
+	parser for GOcean API.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
