--- a/changelog
+++ b/changelog
@@ -72,6 +72,9 @@
 	27) PR #1551 towards #1338. Add OpenMP Clauses and its referenced
 	variables as part of the PSyIR tree.
 
+	28) PR #1838 for #1704. Update replace_with method to take into
+	account named arguments.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
