--- a/changelog
+++ b/changelog
@@ -78,6 +78,12 @@
 	29) PR #1847. Make a subSignature a Signature and allow
 	Signature.to_language w/o arguments
 
+	30) PR #1831 for #1735. Changes the directory structure in the
+	test LFRic infrastructure to mimic that in the full LFRic
+	infrastructure. Alter the testing infrastructure to use the
+	Makefile to build the LFRic library.
+
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
