--- a/changelog
+++ b/changelog
@@ -83,6 +83,8 @@
 	infrastructure. Alter the testing infrastructure to use the
 	Makefile to build the LFRic library.
 
+	31) PR #1814 towards #924. Add new PSyIR InlineTransformation.
+
 
 release 2.3.1 17th of June 2022
 
