#1819 fix UG and update changelog

--- a/changelog
+++ b/changelog
@@ -85,6 +85,8 @@
 
 	31) PR #1814 towards #924. Add new PSyIR InlineTransformation.
 
+	32) PR #1819 for #1815. Forbid OMPTarget regions from containing
+	CodeBlock nodes.
 
 release 2.3.1 17th of June 2022
 
