--- a/changelog
+++ b/changelog
@@ -96,6 +96,8 @@
 
 	35) PR #1827 for #1826. Adds support for SIR intrinsics.
 
+	36) PR #1839 for #1782. Adds a -api option to the PSyAD script.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
