--- a/changelog
+++ b/changelog
@@ -98,6 +98,9 @@
 
 	36) PR #1839 for #1782. Adds a -api option to the PSyAD script.
 
+	37) PR #1844 towards #1823. Makes module inlining work in LFRic
+	when the same kernel is used multiple times.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
