--- a/changelog
+++ b/changelog
@@ -104,6 +104,9 @@
 	38) PR #1825 for #1576. Adds the Reference2ArrayRangeTrans
 	transformation.
 
+	39) PR #1846. Fixes to various docstrings in transformations.py
+	and node.py.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
