--- a/changelog
+++ b/changelog
@@ -113,6 +113,8 @@
 	41) PR #1836 for #1834. Adds support for explicit array-range
 	declarations to the dotproducttrans transformation.
 
+	42) PR #1871 for #1870. Fixes typo in link in User Guide.
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
