--- a/changelog
+++ b/changelog
@@ -115,6 +115,8 @@
 
 	42) PR #1871 for #1870. Fixes typo in link in User Guide.
 
+	43) PR #1875 for #1874. Remove pytest-pep257 dependency from setup.py
+
 release 2.3.1 17th of June 2022
 
         1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
