--- a/changelog
+++ b/changelog
@@ -124,6 +124,9 @@
 
 	45) PR #1768 for #1711. Add initial Sum2CodeTrans transformation.
 
+	46) PR #1885 for #1878. Update FortCL submodule to head of master to
+	fix invalid-boz compilation errors with newer versions of gfortran.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
