--- a/changelog
+++ b/changelog
@@ -127,6 +127,9 @@
 	46) PR #1885 for #1878. Update FortCL submodule to head of master to
 	fix invalid-boz compilation errors with newer versions of gfortran.
 
+	47) PR #1890 for #1889. Fix test to avoid temporary files being
+	left after pytest run.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
