--- a/changelog
+++ b/changelog
@@ -133,6 +133,9 @@
 	48) PR #1850 towards #1799. Initial PSyIR node.datatype implementation
 	to query the resulting datatype of a PSyIR subtree.
 
+	49) PR #1869 for #1868. Extend PSyAD to make use of the
+        Reference2ArrayRangeTrans.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
