--- a/changelog
+++ b/changelog
@@ -136,6 +136,10 @@
 	49) PR #1869 for #1868. Extend PSyAD to make use of the
         Reference2ArrayRangeTrans.
 
+	50) PR #1880 for #1865. Improves support for function calls in the
+	PSyIR by ensuring the associated RoutineSymbol has the correct
+	datatype.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
