--- a/changelog
+++ b/changelog
@@ -142,6 +142,9 @@
 
 	51) PR #1894 for #1893. Fix bug in is_upper/lower_bound for UnknownTypes.
 
+	52) PR #1853 for #1829. Add OMP teams distribute parallel do directive
+	and refactor OMPLoopTrans.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
