--- a/changelog
+++ b/changelog
@@ -145,6 +145,9 @@
 	52) PR #1853 for #1829. Add OMP teams distribute parallel do directive
 	and refactor OMPLoopTrans.
 
+	53) PR #1900 for #1893. Fix bug in is_upper/lower_bound for non-typed
+	Symbols.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
