--- a/changelog
+++ b/changelog
@@ -151,6 +151,9 @@
 	54) PR #1782 for #1496. Adds initial support for PSyAD test
 	harness generation for LFRic kernels. Some issues remain.
 
+	55) PR #1807 towards #1806. Adds PSyIR support for LFRic kernel
+	metadata.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
