--- a/changelog
+++ b/changelog
@@ -154,6 +154,9 @@
 	55) PR #1807 towards #1806. Adds PSyIR support for LFRic kernel
 	metadata.
 
+	56) PR #1906 for #1896. Update HoistLocalArrayTrans to avoid hoisting
+	parameter arrays and, unless explicitly requested, device parallel routines.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
