#1884 update changelog and UG

--- a/changelog
+++ b/changelog
@@ -160,6 +160,9 @@
 	57) PR #1901 towards #1892 and #1898. Add support for storing and
 	querying the index of a metadata argument.
 
+	58) PR #1884 for #1882. Extends the inlining transformation to support
+	inlining of functions.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
