--- a/changelog
+++ b/changelog
@@ -163,6 +163,9 @@
 	58) PR #1884 for #1882. Extends the inlining transformation to support
 	inlining of functions.
 
+	59) PR #1912 for #1851. Fixes pycodestyle (2.9) errors/warnings for
+	with Python 3.10.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
