--- a/changelog
+++ b/changelog
@@ -170,6 +170,11 @@
         the in-lining happens at transformation time rather than code-
 	generation time.
 
+	61) PR #1852 for #1750. Adds an option to VariablesAccessInfo to
+	report/not report array arguments as first parameter to
+	lbound/ubound/size as read access. This fixes several issues with the
+	dependency tools.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
