--- a/changelog
+++ b/changelog
@@ -181,6 +181,9 @@
 	63) PR #1924 for #1923. Fix issues building Developer and Reference
 	guides.
 
+	64) PR #1913 for #1848. Fix issues with case-sensitivity in the
+	SymbolTables.resolve_imports method.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
