--- a/changelog
+++ b/changelog
@@ -187,6 +187,8 @@
 	65) PR #1917 for #1916. Extends InlineTrans to support calls to
 	routines in different Containers.
 
+	66) PR #1940. Replace Python 3.10 with 3.11 in GHA test suite.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
