--- a/changelog
+++ b/changelog
@@ -189,6 +189,9 @@
 
 	66) PR #1940. Replace Python 3.10 with 3.11 in GHA test suite.
 
+	67) PR #1943 for #1942. Fixes incorrect path in tutorial
+	Makefile setup.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
