pr #1937. Added new code.

--- a/src/psyclone/psyad/lfric/README
+++ b/src/psyclone/psyad/lfric/README
@@ -1,2 +1,3 @@
-LFRic revision: 37955
-Last Changed Date: 9th Sept 2022
+LFRic TL kernels taken from branch:
+https://code.metoffice.gov.uk/svn/lfric/LFRic/branches/dev/christinejohnson/r36316_tl_example
+
