--- a/changelog
+++ b/changelog
@@ -197,7 +197,9 @@
 	generic PSyIR (GOcean and LFRic still default to "static").
 
 	69) PR #1892 towards #1824. get_kernel_schedule supports resolving
-	interfaces (e.g. for the LFRic mixed precision kernels)
+	interfaces (e.g. for the LFRic mixed precision kernels).
+
+	70) PR #1911 for #1909. Update fparser dependency.
 
 release 2.3.1 17th of June 2022
 
