--- a/changelog
+++ b/changelog
@@ -201,6 +201,9 @@
 
 	70) PR #1911 for #1909. Update fparser dependency.
 
+	71) PR #1908 for #1879. Completes the new meta-data parsing
+	functionality for the LFRic API.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
