--- a/changelog
+++ b/changelog
@@ -214,6 +214,9 @@
 	74) PR #1982 for #1981. Updates the GHA configuration to use
 	Python 3.7 instead of 3.6.
 
+	75) PR #1956 for #1955. Updates the tests/.pylintrc file to remove
+	unsupported options.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
