--- a/changelog
+++ b/changelog
@@ -220,6 +220,9 @@
 	76) PR #1888 for #1783. Adds NEMO OpenMP transformation scripts
 	to the examples.
 
+	77) PR #1933 for #1902. Adds run-time checks when hoisting
+	local work arrays.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
