--- a/changelog
+++ b/changelog
@@ -223,6 +223,9 @@
 	77) PR #1933 for #1902. Adds run-time checks when hoisting
 	local work arrays.
 
+	78) PR #1963 towards #1883. More work to improving the use of PSyIR
+	in LFRic (as needed for PSyKE driver creation).
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
