--- a/changelog
+++ b/changelog
@@ -242,6 +242,9 @@
 
 	84) PR #1996. Addendum to #1952 to cover missed lines.
 
+	85) PR #1994 for #1986. Fix issues with LFRic OMP support by skipping
+	dependence analysis for coloured loops.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
