--- a/changelog
+++ b/changelog
@@ -250,6 +250,9 @@
 	psyclone script will now quit after outputting the version
 	information.
 
+	87) PR #1970 for #1966. Add an overwrite_datatype option to
+	StructureReferences for when an API knows what type a DeferedType is.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
