--- a/changelog
+++ b/changelog
@@ -267,6 +267,9 @@
 	91) PR #2007 for #2000. Removes pinning of Sphinx version in setup.py
 	now that the linkcheck bug has been fixed in a new release.
 
+	92) PR #1976 for #1974. Fixes issues with literal constants and
+	array accesses in VariableAccessInfo for the LFRic API.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
