--- a/changelog
+++ b/changelog
@@ -273,6 +273,9 @@
 	93) PR #2015 for #2012. Fixes crash in access-information
 	collection when there is an LFRic 'domain' loop.
 
+	94) PR #2014. Extends psyir_from_source() so that the caller
+	can specify if the Fortran is in fixed format.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
