--- a/changelog
+++ b/changelog
@@ -273,6 +273,9 @@
 	93) PR #2015 for #2012. Fixes crash in access-information
 	collection when there is an LFRic 'domain' loop.
 
+	94) PR #2020 for #2019. Fix inconsistencies in handling of precision
+	symbols
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
