--- a/changelog
+++ b/changelog
@@ -282,6 +282,9 @@
 	96) PR #2020 for #2019. Fix inconsistencies in handling of precision
 	symbols
 
+	97) PR #2023 for #1975. Extends DynReferenceElement to ensure that
+	it adds related kernel arguments to KernCallArgList as PSyIR.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
