--- a/changelog
+++ b/changelog
@@ -301,6 +301,9 @@
 	102) PR #2034 for #1864: Add support for adjoint test-harness
 	generation for kernels with operator arguments.
 
+	103) PR #2038 for #1998. Adds support for r_tran_operator_type to
+	LFRic (dynamo0.3).
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
