--- a/changelog
+++ b/changelog
@@ -308,6 +308,10 @@
 	classes and moves utility functions out of the DependencyTools
 	module.
 
+	105) PR #2056 for #2055. Extends the Reference2ArrayRange
+	transformation such that it rejects any References that are args to
+	the DEALLOCATE intrinsic.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
