--- a/changelog
+++ b/changelog
@@ -325,6 +325,9 @@
 	and ensures that LFRicConstants is not created *before* the config.
 	file has been read.
 
+	110) PR #2066 for #1587. Introduces new DebugWriter visitor for
+	fast generation of Fortran-like content in error messages.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
