--- a/changelog
+++ b/changelog
@@ -328,6 +328,9 @@
 	110) PR #2066 for #1587. Introduces new DebugWriter visitor for
 	fast generation of Fortran-like content in error messages.
 
+	111) PR #1914 for #1891. Improves error handling when there are
+	undeclared arguments.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
