--- a/changelog
+++ b/changelog
@@ -336,6 +336,9 @@
 	handling. Also corrects a (tested) docstring so that it sets
 	up a Config object first.
 
+	113) PR #2063. Improve search for optimisation script and handling
+	of any errors when it is imported.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
