--- a/changelog
+++ b/changelog
@@ -345,6 +345,8 @@
 	115) PR #2068 for #352 and #1422. Adds a 'DoWhile' node to represent
 	Fortran DO WHILE and unbounded DO loops.
 
+	116) PR #2072 tidying of IfBlock following #2068.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
