--- a/changelog
+++ b/changelog
@@ -351,6 +351,9 @@
 	in the OMP transformations to infer which variables are firstprivate
 	in some cases.
 
+	118) PR #2059 for #2057. Adds kernel-extraction support for the
+	NEMO API.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
