--- a/changelog
+++ b/changelog
@@ -354,6 +354,8 @@
 	118) PR #2059 for #2057. Adds kernel-extraction support for the
 	NEMO API.
 
+	119) PR #2073. Fixes typos across the repo.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
