--- a/changelog
+++ b/changelog
@@ -356,6 +356,9 @@
 
 	119) PR #2073. Fixes typos across the repo.
 
+	120) PR #2025 for #1483. Adds driver generation for LFRic kernel
+	extraction (PSyKE).
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
