--- a/tutorial/notebooks/psyir/psyir_example2.ipynb
+++ b/tutorial/notebooks/psyir/psyir_example2.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Previously, we learned that each PSyIR node has the `parent` and `children` attributes. However, where appropriate, certain classes of node also support semantic navigation. The `If` node for instance has the logical expression as its first child, the body as its second and the body of any `else` clause as its third.  Similarly, the `Loop` node has its loop bounds and increment as its first three children and the loop body as the fourth. Therefore, in order to simplify navigation and insulate it from any future changes in tree structure, the `If` and `Loop` nodes have the `xx_body` methods:"
+    "Previously, we learned that each PSyIR node has the `parent` and `children` attributes. However, where appropriate, certain classes of node also support semantic navigation. The `If` node for instance has the logical expression as its first child, the body as its second and the body of any `else` clause as its third.  Similarly, the `Loop` node has its loop bounds and increment as its first three children and the loop body as the fourth. Therefore, in order to simplify navigation and insulate it from any future changes in tree structure, the `If` and `Loop` nodes have the `xx_body` methods which return the `Schedule` node that contains the statements making up the body:"
    ]
   },
   {
@@ -70,10 +70,12 @@
    "source": [
     "if_block = psy.children[0].children[0]\n",
     "body = if_block.if_body\n",
-    "print(\"If body: \", type(body.children[0]))\n",
+    "print(\"If body: \", type(body))\n",
+    "print(\"First node in If body: \", type(body.children[0]))\n",
     "loop = body.children[0]\n",
     "loop_body = loop.loop_body\n",
-    "print(\"Loop body: \", type(loop_body.children[0]))"
+    "print(\"Loop body: \", type(loop_body))\n",
+    "print(\"First node in Loop body: \", type(loop_body.children[0]))"
    ]
   },
   {
@@ -83,7 +85,7 @@
    "outputs": [],
    "source": [
     "else_body = if_block.else_body\n",
-    "print(\"Else body: \", type(else_body.children[0]))"
+    "print(\"First node in Else body: \", type(else_body.children[0]))"
    ]
   },
   {
@@ -132,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
