--- a/changelog
+++ b/changelog
@@ -332,7 +332,7 @@
 	undeclared arguments.
 
 	112) PR #2067 towards #1618. Fixes bugs relating to gh_sum for
-        scalars and use of any_space_* spaces in the new metadata
+	scalars and use of any_space_* spaces in the new metadata
 	handling. Also corrects a (tested) docstring so that it sets
 	up a Config object first.
 
@@ -361,6 +361,9 @@
 
 	121) PR #2048 towards #1772. Implements a new MetadataToArgumentsRules
 	class using the new LFRic metadata functionality.
+
+	122) PR #2085 for #840. Add support for minval, maxval and sum Fortran
+	intrinsics.
 
 release 2.3.1 17th of June 2022
 
