--- a/changelog
+++ b/changelog
@@ -365,6 +365,9 @@
 	122) PR #2085 for #840. Add support for minval, maxval and sum Fortran
 	intrinsics.
 
+	123) PR #2077 for #2075. Specify LFRic built-in metadata descriptions
+	within LFRic built-in classes.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
