--- a/changelog
+++ b/changelog
@@ -368,6 +368,9 @@
 	123) PR #2077 for #2075. Specify LFRic built-in metadata descriptions
 	within LFRic built-in classes.
 
+	124) PR #2104 towards #1618. Fix invalid use of subroutine instead of
+	function in an LFRic example algorithm.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
