--- a/changelog
+++ b/changelog
@@ -371,6 +371,9 @@
 	124) PR #2104 towards #1618. Fix invalid use of subroutine instead of
 	function in an LFRic example algorithm.
 
+	125) PR #2098 towards #2091. Split off and rename DynKernCallFactory
+	to LFRicKernCallFactory.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
