#2099 updates for review

--- a/tutorial/notebooks/fparser2/parsing_fortran.ipynb
+++ b/tutorial/notebooks/fparser2/parsing_fortran.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example shows how PSyclone reads existing Fortran code using a parser called fparser2 (https://pypi.org/project/fparser/)."
+    "This example shows how PSyclone reads existing Fortran code using a parser called fparser2 (see https://pypi.org/project/fparser/ and https://fparser.readthedocs.io/en/stable/ for more details)."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PSyclone parses this code using a Fortran parser called fparser2 (see https://fparser.readthedocs.io/en/stable/ if you are interested). Notice that we choose the Fortran2003 standard (`std=f2003`) below. It is also possible to choose Fortran 2008 (`std=f2008`), however newer standards are not yet available in fparser2."
+    "Next we use fparser2 to parse this code. Notice that we choose the Fortran2003 standard (`std=f2003`) below. It is also possible to choose Fortran 2008 (`std=f2008`), however newer standards are not yet available in fparser2."
    ]
   },
   {
