--- a/tutorial/notebooks/nemo/nemo_example3.ipynb
+++ b/tutorial/notebooks/nemo/nemo_example3.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "If we've finished with our transformations we can write out the resultant code which can now run in parallel using OpenMP. Notice that there are some clauses in the OpenMP directives including declarations of private variables. PSyclone works out what these should be for correct execution so you don't need to worry about them.\n",
     "\n",
-    "The [transformation](https://psyclone.readthedocs.io/en/stable/transformations.html#available-transformations) provides an optional argument allowing you to set a schedule other than `static`."
+    "The [transformation](https://psyclone.readthedocs.io/en/stable/transformations.html#available-transformations) provides an optional argument allowing you to set a schedule other than `auto`."
    ]
   },
   {
