--- a/changelog
+++ b/changelog
@@ -379,6 +379,9 @@
 
 	127) PR #2099. Update of tutorials.
 
+	128) PR #1937 for #1935. Adds all LFRic TL and adjoint kernels under
+	examples.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
