--- a/changelog
+++ b/changelog
@@ -382,6 +382,9 @@
 	128) PR #1937 for #1935. Adds all LFRic TL and adjoint kernels under
 	examples.
 
+	129) PR #2112 towards #1618. Splits LFRic eg11 source file into
+	driver and algorithm.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
