--- a/changelog
+++ b/changelog
@@ -385,6 +385,8 @@
 	129) PR #2112 towards #1618. Splits LFRic eg11 source file into
 	driver and algorithm.
 
+	130) PR #2121 for #2109. Update PSyclone to fparser 0.1.1 submodule
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
