--- a/changelog
+++ b/changelog
@@ -388,6 +388,10 @@
 	130) PR #2118 for #2117. Ensure build flags passed to LFRic
 	infrastructure
 
+	131) PR #2026 for #1991. Improves the support for building a
+	standalone driver for an extracted kernel. All required modules are
+	now inlined into the driver source file.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
