--- a/changelog
+++ b/changelog
@@ -399,6 +399,8 @@
 	Algorithm-layer handling using the new metadata processing
 	functionality.
 
+	134) PR #2123. Updates GOcean project link in UG.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
