--- a/changelog
+++ b/changelog
@@ -403,6 +403,9 @@
 
 	135) PR #2121 for #2109. Updates PSyclone to fparser 0.1.1 release.
 
+	136) PR #2128 towards #1618. Bug fix in LFRicAlgInvoke2PSyCallTrans
+	for kernels requiring more than 1 quadrature object.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
