--- a/changelog
+++ b/changelog
@@ -408,6 +408,9 @@
 
 	137) PR #967 towards #2132. Add GH workflows for self-hosted runner.
 
+	138) PR #2084 for #1801. Improve handling of assume-shape arrays with
+	specified bounds.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
