--- a/changelog
+++ b/changelog
@@ -419,6 +419,9 @@
 	separately and to allow software environments other than the
 	default to be specified.
 
+	141) PR #2092 for #2008. Refactors Symbol interfaces and adds support
+	for Static/SAVE variables.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
