--- a/changelog
+++ b/changelog
@@ -425,6 +425,9 @@
 	142) PR #2089 for #2005. Add a SymbolTable merge method and improve symbol
 	renaming capabilities.
 
+	143) PR #2141 towards #1618. Add support for Symbols imported from
+	Containers with renaming.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
