--- a/changelog
+++ b/changelog
@@ -428,6 +428,9 @@
 	143) PR #2141 towards #1618. Add support for Symbols imported from
 	Containers with renaming.
 
+	144) PR #2136 for #2134. Fix compilation tests bug with assumed shape
+	arrays.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
