--- a/changelog
+++ b/changelog
@@ -432,6 +432,8 @@
 
 	145) PR #2115 for #2114. Fortran allocate with type-spec becomes a CodeBlock.
 
+	146) PR #2130 towards #1161. Adds support for HUGE and TINY intrinsics.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
