--- a/changelog
+++ b/changelog
@@ -434,6 +434,8 @@
 
 	146) PR #2130 towards #1161. Adds support for HUGE and TINY intrinsics.
 
+	147) PR #2095 towards #2091. Split off and rename DynInvoke to LFRicInvoke.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
