--- a/changelog
+++ b/changelog
@@ -448,6 +448,8 @@
 	151) PR #2143 for #2043. Adds basic PSyIR support for Fortran COMMON
 	blocks.
 
+	152) PR #2150 towards #2132. Improve self-hosted CI workflow.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
