--- a/changelog
+++ b/changelog
@@ -450,6 +450,9 @@
 
 	152) PR #2150 towards #2132. Improve self-hosted CI workflow.
 
+	153) PR #2090 for #1545. Split off and rename DynCollection to
+	LFRicCollection.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
