--- a/changelog
+++ b/changelog
@@ -456,6 +456,9 @@
 	154) PR #2140 for #2139. Encapsulates the result of the dependency-
 	analysis' get_in_out_parameters() in a single class.
 
+	155) PR #2160 for #2159. Adds support for LFRic kernel arguments with two
+	new precision names (r_bl and r_phys).
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
