--- a/changelog
+++ b/changelog
@@ -459,6 +459,9 @@
 	155) PR #2160 for #2159. Adds support for LFRic kernel arguments with two
 	new precision names (r_bl and r_phys).
 
+	156) PR #2170 for #2169. Correct import of fparser2
+	Declaration_Construct.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
