--- a/changelog
+++ b/changelog
@@ -462,6 +462,9 @@
 	156) PR #2170 for #2169. Correct import of fparser2
 	Declaration_Construct.
 
+	157) PR #2131 towards #1618. Improves the error handling when we find
+	a Routine with the same name as an LFRic Builtin.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
