--- a/changelog
+++ b/changelog
@@ -467,6 +467,9 @@
 
 	158) PR #2147 for #2119. Add elemental and pure routine attributes.
 
+	159) PR #2181 for #2175. Bug fixes for processing of Fortran
+	declarations and integer literals.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
