--- a/changelog
+++ b/changelog
@@ -470,6 +470,9 @@
 	159) PR #2181 for #2175. Bug fixes for processing of Fortran
 	declarations and integer literals.
 
+	160) PR #2107 for #2106. Improvements to NEMO processing scripts and
+	inclusion in Integration Testing.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
