--- a/changelog
+++ b/changelog
@@ -473,6 +473,9 @@
 	160) PR #2107 for #2106. Improvements to NEMO processing scripts and
 	inclusion in Integration Testing.
 
+	161) PR #2198 for #2194. Fixes handling of a function where the
+	precision of the result is only defined within the function.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
