--- a/changelog
+++ b/changelog
@@ -476,6 +476,9 @@
 	161) PR #2198 for #2194. Fixes handling of a function where the
 	precision of the result is only defined within the function.
 
+	162) PR #2187 towards #1618. Remove builtin use statements when
+	lowering.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
