--- a/changelog
+++ b/changelog
@@ -479,6 +479,9 @@
 	162) PR #2187 towards #1618. Remove builtin use statements when
 	lowering.
 
+	163) PR #2191 for #2185. Fix element order used in PSyAD test
+	harness.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
