--- a/changelog
+++ b/changelog
@@ -488,6 +488,9 @@
 	165) PR #2124 fir #2101. Refactors OpenMP inference of private/first-
 	private variables and those requiring synchronisation.
 
+	166) PR #2210 for #2206. Ensure symbol renaming included when deep-
+	copying a symbol table.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
