--- a/changelog
+++ b/changelog
@@ -491,6 +491,9 @@
 	166) PR #2210 for #2206. Ensure symbol renaming included when deep-
 	copying a symbol table.
 
+	167) PR #2209 for #2204. Add support for EQV and NEQV and fix select
+	case bug with logical comparisons.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
