--- a/changelog
+++ b/changelog
@@ -518,6 +518,8 @@
 	175) PR #2172 for #1833. Fixes the LFRic tutorials so that they
 	build correctly.
 
+	176) PR #2227 for #2226. Adds new Node.path_from(ancestor) method.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
