pr #2241. Updated changelog ready for merge to master.

--- a/changelog
+++ b/changelog
@@ -575,6 +575,10 @@
 	193) PR #2260 for #2245. Splits LFRicLoopBounds class from
 	dynamo0.3.py.
 
+	194 PR #2241 for #2215. Adds support for Fortran names being the
+	same as Python keywords when using sympy within PSyclone, e.g. in
+	comparisons between expressions.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
