#2197 Update changelog and UG, and fix pycodestyle issues

--- a/changelog
+++ b/changelog
@@ -28,6 +28,9 @@
 
 	10) PR #2285 for #2284. Split LFRicRunTimeChecks from dynamo0p3.py.
 
+	11) PR #2313 towards #2197. LFRic PSyLayer uses array pointers instead
+	of derived types accessors in the kernel/builtin arguments.
+
 release 2.4.0 29th of September 2023
 
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
